Updated MainApp, Controllers, DAOs, and Services